# sr-log

./: .gitignore  LICENSE  README.md  Tests.hs  flake.nix  sr-log.cabal
SeeReason/: CallStack.hs  Log.hs  LogClient.hs  LogPure.hs  LogServer.hs  LogWM.hs  SrcLoc.hs  Test.hs  Test2.hs
src/SeeReason/: Log.hs  LogClient.hs  LogFormat.hs  LogOrphans.hs  LogPure.hs  LogServer.hs  SrcLoc.hs  Test2.hs
